2006-11-27  Leonard den Ottolander  <leonard den ottolander nl>

	* NEWS: Bash < 2.05b (3-digit octals in echo_e_cmd) no longer
	supported.

2006-09-07  Pavel Tsekov  <ptsekov@gmx.net>

	* acinclude.m4 (AC_GET_FS_INFO): Add erronously removed call to
	gl_FSTYPENAME.
	* m4/ls-mntd-fs.m4 (gl_LIST_MOUNTED_FILE_SYSTEMS): Add missing 
	include directive for sys/param.h.

2006-09-07  Pavel Tsekov  <ptsekov@gmx.net>

	* m4/ls-mntd-fs.m4: Update to serial#22, which adds support
	for getmntinfo() returning its result in struct statvfs.
	* m4/fstypename.m4: Update to serial#6, which replaces
	HAVE_F_FSTYPENAME_IN_STATFS with HAVE_STRUCT_STATFS_F_FSTYPENAME.

2006-09-07  Pavel Tsekov  <ptsekov@gmx.net>

	* acinclude.m4 (AC_GET_FS_INFO): Revert a failed attempt to
	properly detect getmntinfo() returning its result in struct statvfs.

2006-06-30  Hampa Hug  <hampa@hampa.ch>

	* acinclude.m4 (AC_GET_FS_INFO): Check the return value of
	getmntinfo() properly.

2006-06-17  Pavel Tsekov  <ptsekov@gmx.net>

	* m4/fstypename.m4: New file.
	* acinclude.m4 (AC_GET_FS_INFO): Add a check to determine whether
	getmntinfo() takes struct statvfs instead of struct statfs as its
	first argument. Define MOUNTED_GETMNTINFO_STATVFS if it does.
	Add a check to determine whether struct statvfs has a field named
	f_fstypename.
	Use gl_FSTYPENAME tp determine whether struct statfs has a field
	named f_fstypename.

2006-06-07  Pavel Tsekov  <ptsekov@gmx.net>

	* configure.ac: Revert last commit.

2006-05-29  Roland Illig  <roland.illig@gmx.de>

	* m4/ls-mntd-fs.m4: Updated to serial #21, which fixes the use
	of an undefined variable.

2006-05-21  Roland Illig  <roland.illig@gmx.de>

	* configure.ac: Fixed detection of <sys/statvfs.h>, statvfs()
	and struct statvfs.f_fstypename, so that mc builds on NetBSD 3.0
	again.

2006-04-18  Pavel Tsekov  <ptsekov@gmx.net>

	* acinclude.m4 (AC_GET_FS_INFO): Make it work again - the last
	commit broke it.
	* m4/onceonly.m4: New file.
